# ChangeLog for games-engines/scummvm
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-engines/scummvm/ChangeLog,v 1.42 2006/12/12 22:41:29 wolf31o2 Exp $

  12 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +files/flac-1.1.3.patch, scummvm-0.9.1.ebuild:
  Added patch from Josh Coalson (from FLAC) and closing bug #157582.

  28 Nov 2006; Tristan Heaven <nyhm@gentoo.org> scummvm-0.9.1.ebuild:
  List in the AdventureGame menu category, bug #155852

  06 Nov 2006; Javier Villavicencio <the_paya@gentoo.org>
  scummvm-0.9.1.ebuild:
  Keyworded ~x86-fbsd.

  30 Oct 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -scummvm-0.9.0.ebuild:
  clean out old, broken version (bug #146336)

*scummvm-0.9.1 (30 Oct 2006)

  30 Oct 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +scummvm-0.9.1.ebuild:
  version bump

  27 Oct 2006; Steve Dibb <beandog@gentoo.org> scummvm-0.9.0.ebuild:
  amd64 stable, bug 144170

  19 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> scummvm-0.8.1.ebuild,
  scummvm-0.9.0.ebuild:
  Depend on 1.1.2 version of flac, as the 1.1.3 version changes API.

  25 Aug 2006; Jason Wever <weeve@gentoo.org> scummvm-0.9.0.ebuild:
  Stable on SPARC.

  05 Aug 2006; Michael Hanselmann <hansmi@gentoo.org> scummvm-0.9.0.ebuild:
  Stable on ppc.

  30 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -files/scummvm-0.8.0-configure.patch, -scummvm-0.8.0.ebuild,
  scummvm-0.9.0.ebuild:
  stable for x86; also install new modern theme - patch submission from Michael
  Vogt (bug #138121)

*scummvm-0.9.0 (26 Jun 2006)

  26 Jun 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +scummvm-0.9.0.ebuild:
  version bump

  22 Jun 2006; Michael Sterrett <mr_bones_@gentoo.org> scummvm-0.8.2.ebuild:
  Add support for fluidsynth (bug #137547)

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> files/digest-scummvm-0.8.0,
  files/digest-scummvm-0.8.1, Manifest:
  Fixing SHA256 digest, pass four

*scummvm-0.8.2 (10 Feb 2006)
