@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/sdl-sound
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/sdl-sound/ChangeLog,v 1.24 2006/12/12 22:35:31 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/sdl-sound/ChangeLog,v 1.25 2006/12/12 22:46:38 wolf31o2 Exp $
+
+  12 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  sdl-sound-1.0.1-r2.ebuild:
+  Remove dependency on the specific flac version.
 
   12 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   +files/flac-1.1.3.patch, sdl-sound-1.0.1-r2.ebuild:
