@@ -1,6 +1,9 @@
 # ChangeLog for games-engines/scummvm
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-engines/scummvm/ChangeLog,v 1.42 2006/12/12 22:41:29 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-engines/scummvm/ChangeLog,v 1.43 2006/12/12 22:45:59 wolf31o2 Exp $
+
+  12 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> scummvm-0.9.1.ebuild:
+  Remove dependency on the specific flac version.
 
   12 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   +files/flac-1.1.3.patch, scummvm-0.9.1.ebuild:
